--- a/project/package.json
+++ b/project/package.json
@@ -68,6 +68,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/faker": "^5.5.8",
     "@types/jest": "^29.1.2",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
