добавление карты и маркеров

--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -11,6 +11,9 @@
       ],
       "types": [
         "./types"
+      ],
+      "hooks": [
+        "./hooks"
       ]
     },
     "target": "es2020",
